# CPU-RayTraycer

./: .gitignore  CLine.hpp  CMakeLists.txt  Color.cpp  Color.h  Ray.cpp  Ray.h  RayTracerUtility.hpp  ReadMe.md  Vec.hpp  main.cpp
SceneObjects/: CSphere.cpp  CSphere.h  CTriangle.cpp  CTriangle.h  Disk.cpp  Disk.h  DiskLight.cpp  DiskLight.h  Geometry.h  Mesh.cpp  Mesh.h
doc/: Camera.md  DiffuseReflection.md  HowToCastARay.md  PixelCalculation.md  PseudoCode.md  Refraction.md  SpecularReflection.md
doc/diagrams/: 2DRayTracer.drawio  CastARay.drawio  RTconcept.drawio  Specular.drawio  antialiasing.drawio  diffuse.drawio  fovCalc.drawio  intersections.drawio  refraction.drawio  samplingSphere.drawio  specularReflectionExpression.drawio
lib/: bitmap_image.hpp
